@@ -55,6 +55,16 @@
   %>
   </span>
 </div>
+% if ( exists $metaDataCert->{'subjAltNames'} ) {
+<div>
+  <br>
+  <span class="ftitle"><% __('Subject Alternative Names') %>: </span>
+  <span class="ftitle">
+%     my $subjAltNamesStr = join(', ', map { "$_->{type}:$_->{value}" } @{$metaDataCert->{'subjAltNames'}});
+     <% $subjAltNamesStr %>
+  </span>
+</div>
+% }
 <br>
 <form action="RenewCertificate" method="post" >
   <& formTable.mas, rows => \@renewTable &>
