@@ -1,0 +1,9 @@
+## Process this file with automake to produce Makefile.in
+
+Stubdir = @STUBSPATH@/ca
+
+nobase_Stub_DATA = v3_ext.mas
+
+EXTRA_DIST = $(nobase_Stub_DATA)
+
+MAINTAINERCLEANFILES = Makefile.in
