@@ -55,11 +55,11 @@ else {
 % if (not $inputComponent =~ m/hidden\.mas$/ ) {
   <& .div, type => 'warning', content => $warning &>
   <& .div, type => 'note', content => $note &>
-  <& .div, type => 'help', content => $help &>
   <tr>
-       <& .labelTd, printableName => $printableName &>
+       <& .labelTd, printableName => $printableName, optional => $ARGS{optional} &>
      <td>
         <& $inputComponent, %ARGS  &>
+        <& .div, type => 'field_help', content => $help &>
      </td>
 
   </tr>
@@ -72,6 +72,7 @@ else {
 <%def .labelTd>
 <%args>
 $printableName
+$optional => 0
 </%args>
 <%init>
 if ($printableName ne '') {
@@ -79,9 +80,11 @@ if ($printableName ne '') {
 }
 </%init>
      <td class='tright' >
-       <span class='ftitle'>
          <% "$printableName" %>
-       </span>
+% if ( $optional ) {
+%    my $optionalText = __d('Optional', 'libebox');
+     <div class="optional_field"><% $optionalText %></div>
+% }
      </td>
 </%def>
 
