@@ -1,4 +1,6 @@
 HEAD
+	+ Add field help to old-school templates with MVC
+	+ Add optional text to old-school templates with MVC
 	+ Updated translations: de, et, hu, id, it, nb, nl, pt, pt_BR, ru,
 	  sk, sr
 1.5
